--- a/UnityAds2Demo/proj.android-studio/app/build.gradle
+++ b/UnityAds2Demo/proj.android-studio/app/build.gradle
@@ -44,6 +44,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':libcocos2dx')
+    compile project(':unity-ads-2')
 }
