--- a/UnityAds2Demo/proj.android-studio/settings.gradle
+++ b/UnityAds2Demo/proj.android-studio/settings.gradle
@@ -1,4 +1,4 @@
-include ':libcocos2dx'
+include ':libcocos2dx', ':unity-ads-2'
 project(':libcocos2dx').projectDir = new File(settingsDir, '../cocos2d/cocos/platform/android/libcocos2dx')
 include ':UnityAds2Demo'
 project(':UnityAds2Demo').projectDir = new File(settingsDir, 'app')
